# bare-mpv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  binding.cc  binding.js  index.js  index.test.cjs  package.json
.github/workflows/: prebuild.yml
cmake/: bare-mpv.exported_symbols  bare-mpv.version
cmake/ports/dav1d/: port.cmake
cmake/ports/ffmpeg/: port.cmake
cmake/ports/freetype/: port.cmake
cmake/ports/fribidi/: port.cmake
cmake/ports/harfbuzz/: port.cmake
cmake/ports/libass/: port.cmake
cmake/ports/libdrm/: port.cmake
cmake/ports/libplacebo/: port.cmake
cmake/ports/libva/: port.cmake
cmake/ports/mpv/: copy-source.cmake  patch-threads-posix.cmake  threads-posix-ios.patch
cmake/ports/mpv/patches/: 0001-libplacebo-option.patch
prebuilds/linux-arm64/: libasound.so.2
prebuilds/linux-x64/: libasound.so.2
scripts/: postinstall.js
